manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdemo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springdemo
  template:
    metadata:
      labels:
        app: springdemo
    spec:
      containers:
      - name: springdemo-container
        image: pma4acr.azurecr.io/springdemo:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: springdemo
spec:
  selector:
    app: springdemo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
